<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nu.rolandsson.jakob.prototype.PrototypeActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_from_currency"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <nu.rolandsson.jakob.prototype.components.CurrencyComponent
                    android:id="@+id/p_currency_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_to_currency"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <nu.rolandsson.jakob.prototype.components.CurrencyComponent
                    android:id="@+id/p_currency_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_formatted_from"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/p_currency_from_header"
            android:layout_weight="2"
            android:layout_gravity="bottom"
            android:textColor="@color/colorDark"
            android:textStyle="bold"/>

        <nu.rolandsson.jakob.prototype.components.TextComponent
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/p_currency_input"
            android:hint="@string/p_currency_hint"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_weight="1"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_formatted_to"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/p_currency_to_header"
            android:layout_weight="2"
            android:layout_gravity="bottom"
            android:textColor="@color/colorDark"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/p_no_value"
            android:id="@+id/p_currency_result"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_weight="1"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p_history_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorDark"
        android:textStyle="bold"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/p_currency_history" />

</LinearLayout>
